k8s/base/investwells/service.yml
apiVersion: v1
kind: Service
metadata:
  name: investwells
  namespace: investwells-system
spec:
  selector:
    app: investwells
  ports:
    - port: 80
      targetPort: 8080
